Completed training module "01-openapi"
